--- a/rocketFlowSdk/src/main/res/values/strings.xml
+++ b/rocketFlowSdk/src/main/res/values/strings.xml
@@ -709,6 +709,8 @@
     <string name="preferred_visit_date_time">Preferred Visit Date/Time</string>
     <string name="when_would_you_like_technician_to_visit">When would you like technician to visit?</string>
     <string name="around_what_time_would_you_like_technician_to_visit">Around what time would you like technician to visit?</string>
+    <string name="select_time_slot">Please select a time slot of your convenience</string>
+    <string name="select_preferred_date">Please select a preferred Date"</string>
 
     <string-array name="Places">
         <item>Noida</item>
